This is my attempt at adding the three images, pre walkthrough

--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ html {
 }
 
 body {
-	background: #DDDDDD;
+	background: #FFFFFF;
 }
 
 h1,
@@ -24,6 +24,7 @@ h6,
 p, 
 a {
 	font-family: 'Roboto', sans-serif; 
+	font-weight: 400;
 	letter-spacing: 0.03em;
 }
 
@@ -38,7 +39,9 @@ a {
 ********************/
 
 .top-navigation {
-	margin: 0;
+	position: fixed;
+	width: 100%;
+	z-index: 9999;
 	background-color: #ffffff;
 }
 
@@ -88,12 +91,12 @@ a {
 	background-position: center bottom;
 	background-repeat: no-repeat;
 	background-size: cover;
-	height: 650px;
+	height: 40rem;
 	overflow: auto;
 }
 
 .introduction h1 {
-	margin-top: 250px;
+	margin-top: 15rem;
 }
 
 .introduction h1,
@@ -107,7 +110,7 @@ a {
   	text-align: center;
 }
 
-.buttons button {
+.big-button {
 	transition: all 0.5s ease;
 	width: 10rem;
 	background-color: #f15a29;
@@ -120,7 +123,29 @@ a {
 	font-size: 1.125rem;
 }
 
-.buttons button:hover {
+.big-button:hover {
 	background-color: #C74B23;
 }
+
+/********************
+	Details area
+********************/
+
+.cases {
+	padding: 5rem 0;
+	text-align: center;
+}
+
+.img-list {
+	margin: 2rem auto;
+	list-style: none;
+}
+
+.img-list li {
+	float: left;
+	display: inline-block;
+	list-syle: none;
+	width: 33.33%;
+}
+
 
